Dashboard UI Completed

--- a/src/main/resources/view/SignUpForm.fxml
+++ b/src/main/resources/view/SignUpForm.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.Group?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,23 +11,55 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: blue;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controller.SignUpFormController">
+<AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: blue;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controller.SignUpFormController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#a8cef0c2" height="375.0" layoutX="212.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" width="376.0" />
-      <ImageView fitHeight="208.0" fitWidth="209.0" layoutX="4.0" layoutY="96.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="414.0" fitWidth="473.0" layoutX="15.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/register.png" />
          </image>
       </ImageView>
-      <Text layoutX="313.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign Up" textAlignment="CENTER" wrappingWidth="173.90002441406273">
-         <font>
-            <Font name="Ebrima Bold" size="31.0" />
-         </font>
-      </Text>
-      <JFXTextField fx:id="txtUsername" layoutX="241.0" layoutY="96.0" prefHeight="26.0" prefWidth="198.0" promptText="Username" text="Enter your E-mail" unFocusColor="WHITE" viewOrder="-3.0" />
-      <JFXTextField fx:id="txtUsername1" layoutX="241.0" layoutY="149.0" prefHeight="26.0" prefWidth="198.0" promptText="Username" text="Enter your username" unFocusColor="WHITE" viewOrder="-3.0" />
-      <JFXTextField fx:id="txtUsername11" layoutX="241.0" layoutY="211.0" prefHeight="26.0" prefWidth="198.0" promptText="Username" text="Enter your password" unFocusColor="WHITE" viewOrder="-3.0" />
-      <JFXTextField fx:id="txtUsername111" layoutX="241.0" layoutY="274.0" prefHeight="26.0" prefWidth="198.0" promptText="Username" text="Re-enter password" unFocusColor="WHITE" viewOrder="-3.0" />
-      <Text fill="#b40505" layoutX="240.0" layoutY="255.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*Password should have 8 characters" />
+      <Group>
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8cbeed" height="653.0" layoutX="445.0" layoutY="32.0" opacity="0.87" stroke="BLACK" strokeType="INSIDE" width="603.0" />
+            <Text layoutX="689.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign Up ">
+               <font>
+                  <Font size="42.0" />
+               </font>
+            </Text>
+            <JFXTextField layoutX="472.0" layoutY="155.0" prefHeight="45.0" prefWidth="450.0" promptText="Enter Your E-Mail">
+               <font>
+                  <Font size="21.0" />
+               </font>
+            </JFXTextField>
+            <JFXTextField layoutX="470.0" layoutY="433.0" prefHeight="45.0" prefWidth="450.0" promptText="Enter Your E-Mail" text="Re-Enter Password">
+               <font>
+                  <Font size="21.0" />
+               </font>
+            </JFXTextField>
+            <JFXTextField layoutX="472.0" layoutY="337.0" prefHeight="45.0" prefWidth="450.0" promptText="Enter Your E-Mail" text="Enter Your Password">
+               <font>
+                  <Font size="21.0" />
+               </font>
+            </JFXTextField>
+            <JFXTextField layoutX="472.0" layoutY="242.0" prefHeight="45.0" prefWidth="450.0" promptText="Enter Your E-Mail" text="Enter Username">
+               <font>
+                  <Font size="21.0" />
+               </font>
+            </JFXTextField>
+            <JFXButton layoutX="654.0" layoutY="552.0" prefHeight="60.0" prefWidth="133.0" style="-fx-border-radius: 80; -fx-background-color: yellow;" text="Register">
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </JFXButton>
+         </children>
+      </Group>
+      <ImageView fitHeight="50.0" fitWidth="47.0" layoutX="22.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assets/back.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
