--- a/src/main/resources/view/LoginForm.fxml
+++ b/src/main/resources/view/LoginForm.fxml
@@ -2,8 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,55 +11,69 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: blue;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controller.LoginFormController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: blue;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#a7cef2c7" height="352.0" layoutX="269.0" layoutY="17.0" stroke="BLACK" strokeType="INSIDE" width="311.0" />
-      <Text fill="#fcf3f3" layoutX="47.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WELCOME TO " textAlignment="CENTER" wrappingWidth="162.775390625">
+      <Text layoutX="65.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WELCOME TO " textAlignment="CENTER" wrappingWidth="254.93675231933594">
          <font>
-            <Font name="Ebrima Bold" size="31.0" />
+            <Font size="50.0" />
          </font>
       </Text>
-      <Text fill="#f4e32a" layoutX="35.0" layoutY="153.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CLOTHIFY" textAlignment="CENTER" wrappingWidth="181.0000000000001">
+      <Text fill="#fbf445" layoutX="65.0" layoutY="346.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CLOTHIFY" wrappingWidth="254.936752319336">
          <font>
-            <Font name="Arial Black" size="31.0" />
+            <Font size="55.0" />
          </font>
       </Text>
-      <Text fill="#fcf3f3" layoutX="270.0" layoutY="171.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="98.77536010742188">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Text>
-      <JFXTextField fx:id="txtUsername" layoutX="283.0" layoutY="99.0" prefHeight="26.0" prefWidth="198.0" promptText="Username" unFocusColor="WHITE" viewOrder="-3.0" />
-      <JFXTextField layoutX="283.0" layoutY="149.0" prefHeight="28.0" prefWidth="198.0" promptText="Password" unFocusColor="WHITE" viewOrder="-3.0" />
-      <ImageView fitHeight="165.0" fitWidth="188.0" layoutX="38.0" layoutY="189.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="239.0" fitWidth="255.0" layoutX="81.0" layoutY="411.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/brand.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="209.0" fitWidth="248.0" layoutX="378.0" layoutY="87.0" opacity="0.3" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../assets/fashion.png" />
-         </image>
-      </ImageView>
-      <Text layoutX="288.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign In" textAlignment="CENTER" wrappingWidth="271.5000000000002">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8dbdeb" height="603.0" layoutX="426.0" layoutY="59.0" opacity="0.87" stroke="BLACK" strokeType="INSIDE" width="592.0" />
+      <Text layoutX="607.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign Up " textAlignment="CENTER" wrappingWidth="254.93675231933594">
          <font>
-            <Font name="Ebrima Bold" size="31.0" />
+            <Font size="41.0" />
          </font>
       </Text>
-      <JFXButton buttonType="RAISED" layoutX="389.0" layoutY="238.4" prefHeight="10.0" prefWidth="70.0" ripplerFill="#fae500" style="-fx-background-color: yellow; -fx-border-color: black; -fx-border-radius: 3;" text="Log In" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.topAnchor="238.4">
+      <Text layoutX="456.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" textAlignment="CENTER" wrappingWidth="140.5367889404297">
          <font>
-            <Font name="Ebrima" size="12.0" />
+            <Font size="26.0" />
          </font>
-         <padding>
-            <Insets top="1.0" />
-         </padding>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
+      </Text>
+      <Text layoutX="456.0" layoutY="337.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" textAlignment="CENTER" wrappingWidth="140.5367889404297">
+         <font>
+            <Font size="26.0" />
+         </font>
+      </Text>
+      <JFXTextField layoutX="469.0" layoutY="224.0" prefHeight="26.0" prefWidth="371.0" promptText="username">
+         <font>
+            <Font size="16.0" />
+         </font></JFXTextField>
+      <JFXTextField layoutX="469.0" layoutY="361.0" prefHeight="26.0" prefWidth="371.0" promptText="password">
+         <font>
+            <Font size="16.0" />
+         </font></JFXTextField>
+      <JFXButton layoutX="670.0" layoutY="452.0" style="-fx-border-radius: 80; -fx-background-color: yellow;" text="LOG IN">
+         <font>
+            <Font size="24.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </JFXButton>
-      <Line endX="40.0" endY="3.0517578125E-5" layoutX="341.0" layoutY="250.0" startX="-60.399993896484375" startY="3.0517578125E-5" />
-      <Line endX="40.0" endY="3.0517578125E-5" layoutX="529.0" layoutY="251.0" startX="-60.399993896484375" startY="3.0517578125E-5" />
-      <Text layoutX="297.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Do you haven't account..?" />
-      <Hyperlink layoutX="439.0" layoutY="294.0" prefHeight="12.0" prefWidth="98.0" text="Create Account" textFill="#b72cbf" underline="true" />
+      <Line endX="107.00006103515625" layoutX="911.0" layoutY="482.0" startX="-116.20001220703125" stroke="#042d8e" />
+      <Line endX="100.0" layoutX="553.0" layoutY="482.0" startX="-127.0" stroke="#042d8e" />
+      <Text layoutX="464.0" layoutY="582.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Do you haven’t account..? " textAlignment="CENTER" wrappingWidth="285.33677673339844">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
+      <Text fill="#6c0cc7" layoutX="707.0" layoutY="582.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Click here to create account" textAlignment="CENTER" wrappingWidth="285.33677673339844">
+         <font>
+            <Font size="20.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Text>
    </children>
 </AnchorPane>
