--- a/src/main/resources/view/LoginForm.fxml
+++ b/src/main/resources/view/LoginForm.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: blue;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text layoutX="65.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WELCOME TO " textAlignment="CENTER" wrappingWidth="254.93675231933594">
          <font>
@@ -52,7 +52,7 @@
          <font>
             <Font size="16.0" />
          </font></JFXTextField>
-      <JFXButton layoutX="670.0" layoutY="452.0" style="-fx-border-radius: 80; -fx-background-color: yellow;" text="LOG IN">
+      <JFXButton layoutX="670.0" layoutY="452.0" style="-fx-border-radius: 80; -fx-background-color: #c23616;" text="LOG IN" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
