--- a/src/main/resources/view/SignUpForm.fxml
+++ b/src/main/resources/view/SignUpForm.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: blue;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controller.SignUpFormController">
+<AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.SignUpFormController">
    <children>
-      <ImageView fitHeight="414.0" fitWidth="473.0" layoutX="15.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView blendMode="SRC_ATOP" fitHeight="414.0" fitWidth="473.0" layoutX="15.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/register.png" />
          </image>
@@ -46,7 +46,7 @@
                   <Font size="21.0" />
                </font>
             </JFXTextField>
-            <JFXButton layoutX="654.0" layoutY="552.0" prefHeight="60.0" prefWidth="133.0" style="-fx-border-radius: 80; -fx-background-color: yellow;" text="Register">
+            <JFXButton layoutX="654.0" layoutY="552.0" prefHeight="60.0" prefWidth="133.0" style="-fx-border-radius: 80; -fx-background-color: #d63031;" text="Register" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
