--- a/src/main/resources/view/ManageEmpForm.fxml
+++ b/src/main/resources/view/ManageEmpForm.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.ManageEmpFormController">
+<AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.employee.ManageEmpFormController">
    <children>
       <Text layoutX="56.0" layoutY="169.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MANAGE EMPLOYEES" wrappingWidth="546.9367065429688">
          <font>
@@ -20,12 +20,7 @@
             <Image url="@../assets/back.png" />
          </image>
       </ImageView>
-      <ImageView blendMode="MULTIPLY" fitHeight="502.0" fitWidth="1041.0" layoutX="-12.0" layoutY="254.0" opacity="0.55" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../assets/Employees.jpg" />
-         </image>
-      </ImageView>
-      <JFXButton layoutX="602.0" layoutY="228.0" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Add New Employee" textFill="WHITE">
+      <JFXButton layoutX="619.0" layoutY="198.0" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Add New Employee" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -41,7 +36,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton layoutX="823.0" layoutY="476.0" prefHeight="59.0" prefWidth="198.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Delete Details" textFill="WHITE">
+      <JFXButton layoutX="823.0" layoutY="476.0" prefHeight="59.0" prefWidth="198.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Remove Details" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -57,5 +52,10 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
+      <ImageView fitHeight="496.0" fitWidth="810.0" layoutX="-8.0" layoutY="230.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assets/Employees-removebg-preview.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
