--- a/src/main/resources/view/ManageSupForm.fxml
+++ b/src/main/resources/view/ManageSupForm.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Text?>
 
 
-<AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.ManageSupFormController">
+<AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.supplier.ManageSupFormController">
    <children>
       <ImageView fitHeight="494.0" fitWidth="865.0" layoutX="-41.0" layoutY="246.0" opacity="0.99" pickOnBounds="true" preserveRatio="true">
          <image>
