--- a/src/main/resources/view/AddEmpForm.fxml
+++ b/src/main/resources/view/AddEmpForm.fxml
@@ -1,14 +1,93 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="edu.icet.pos.controllers.employee.AddEmpFormController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="684.0" prefWidth="1085.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.employee.AddEmpFormController">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#bfc12c" height="68.0" layoutX="-3.0" stroke="#eef202" strokeType="INSIDE" width="1088.0" />
+      <Text layoutX="408.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Employee">
+         <font>
+            <Font size="42.0" />
+         </font>
+      </Text>
+      <Text layoutX="26.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Employee ID :">
+         <font>
+            <Font size="26.0" />
+         </font>
+      </Text>
+      <Text fx:id="txtEmpID" fill="WHITE" layoutX="195.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0000">
+         <font>
+            <Font size="26.0" />
+         </font>
+      </Text>
+      <JFXTextField fx:id="txtEmpName" layoutX="28.0" layoutY="194.0" prefHeight="26.0" prefWidth="337.0" promptText="Enter Employee Name">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="txtEmpAddress" layoutX="26.0" layoutY="292.0" prefHeight="26.0" prefWidth="337.0" promptText="Enter Employee Address">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="txtEmpPhone" layoutX="26.0" layoutY="395.0" prefHeight="26.0" prefWidth="337.0" promptText="Enter Employee Phone Number">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="txtEmpMail" layoutX="27.0" layoutY="495.0" prefHeight="26.0" prefWidth="337.0" promptText="Enter Employee E-Mail">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <TableView layoutX="409.0" layoutY="121.0" prefHeight="430.0" prefWidth="660.0">
+        <columns>
+          <TableColumn fx:id="colEmpID" prefWidth="97.60003662109375" text="ID" />
+          <TableColumn fx:id="colEmpName" prefWidth="115.99993896484375" text="Name" />
+            <TableColumn fx:id="colEmpAddress" prefWidth="126.4000244140625" text="Address" />
+            <TableColumn fx:id="colEmpPhone" prefWidth="166.1334228515625" text="Phone Number" />
+            <TableColumn fx:id="colMail" prefWidth="152.26654052734375" text="E-Mail" />
+        </columns>
+      </TableView>
+      <JFXButton layoutX="706.0" layoutY="614.0" onAction="#btnRegisterOnAction" prefHeight="51.0" prefWidth="118.0" style="-fx-background-color: #f1c40f;" text="Register">
+         <font>
+            <Font size="24.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXButton layoutX="873.0" layoutY="616.0" onAction="#btnClearFormOnAction" prefHeight="51.0" prefWidth="162.0" style="-fx-border-radius: 80; -fx-background-color: #d63031;" text="Clear Form" textFill="WHITE">
+         <font>
+            <Font size="24.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <ImageView fitHeight="62.0" fitWidth="73.0" layoutX="12.0" layoutY="608.0" mouseTransparent="true" onMouseClicked="#btnBackOnAction" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assets/back.png" />
+         </image>
+         <effect>
+            <DropShadow offsetX="5.0" offsetY="3.0" spread="0.07" />
+         </effect>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
+      <Separator layoutX="385.0" layoutY="92.0" opacity="0.75" orientation="VERTICAL" prefHeight="496.0" prefWidth="4.0" />
+   </children>
 </AnchorPane>
