--- a/src/main/resources/view/UpdateEmpDetailsForm.fxml
+++ b/src/main/resources/view/UpdateEmpDetailsForm.fxml
@@ -1,14 +1,97 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="edu.icet.pos.controllers.employee.UpdateEmpDetailsFormController"
-            prefHeight="720.0" prefWidth="1080.0">
 
+<AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.employee.UpdateEmpDetailsFormController">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#bfc12c" height="68.0" layoutX="-19.0" stroke="#eef202" strokeType="INSIDE" width="1103.0" />
+      <Text layoutX="303.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Update Employee Details">
+         <font>
+            <Font size="42.0" />
+         </font>
+      </Text>
+      <JFXTextField fx:id="txtEmpID" layoutX="33.0" layoutY="110.0" prefHeight="46.0" prefWidth="198.0" promptText="Enter Employee ID">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXButton layoutX="247.0" layoutY="105.0" onAction="#btnSearchOnAction" prefHeight="51.0" prefWidth="118.0" style="-fx-background-color: #f1c40f;" text="Search">
+         <font>
+            <Font size="24.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXTextField fx:id="txtEmpName" layoutX="24.0" layoutY="219.0" prefHeight="46.0" prefWidth="360.0" promptText=" Employee Name">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="txtEmpPhoneNumber" layoutX="24.0" layoutY="396.0" prefHeight="46.0" prefWidth="356.0" promptText="Employee Phone Number">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="txtEmpAddress" layoutX="23.0" layoutY="305.0" prefHeight="46.0" prefWidth="356.0" promptText="Employee Address">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="txtEmpMail" layoutX="19.0" layoutY="494.0" prefHeight="46.0" prefWidth="362.0" promptText="Employee E-Mail">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXButton layoutX="710.0" layoutY="654.0" onAction="#btnUpdateOnAction" prefHeight="51.0" prefWidth="118.0" style="-fx-background-color: #34495e;" text="Update" textFill="WHITE">
+         <font>
+            <Font size="24.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXButton layoutX="879.0" layoutY="652.0" onAction="#btnRemoveOnAction" prefHeight="51.0" prefWidth="118.0" style="-fx-background-color: #d63031;" text="Remove" textFill="WHITE">
+         <font>
+            <Font size="24.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <TableView layoutX="419.0" layoutY="131.0" prefHeight="430.0" prefWidth="660.0">
+         <columns>
+            <TableColumn fx:id="colEmpID" prefWidth="97.60003662109375" text="ID" />
+            <TableColumn fx:id="colEmpName" prefWidth="115.99993896484375" text="Name" />
+            <TableColumn fx:id="colEmpAddress" prefWidth="126.4000244140625" text="Address" />
+            <TableColumn fx:id="colEmpPhone" prefWidth="166.1334228515625" text="Phone Number" />
+            <TableColumn fx:id="colMail" prefWidth="152.26654052734375" text="E-Mail" />
+         </columns>
+      </TableView>
+      <Separator layoutX="398.0" layoutY="109.0" opacity="0.75" orientation="VERTICAL" prefHeight="496.0" prefWidth="4.0" />
+      <ImageView fitHeight="62.0" fitWidth="73.0" layoutX="15.0" layoutY="641.0" mouseTransparent="true" onMouseClicked="#btnBackOnAction" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assets/back.png" />
+         </image>
+         <effect>
+            <DropShadow offsetX="5.0" offsetY="3.0" spread="0.07" />
+         </effect>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
+   </children>
 </AnchorPane>
