--- a/src/main/resources/view/SignUpForm.fxml
+++ b/src/main/resources/view/SignUpForm.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.SignUpFormController">
+<AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.user.SignUpFormController">
    <children>
       <ImageView blendMode="SRC_ATOP" fitHeight="414.0" fitWidth="473.0" layoutX="15.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true">
          <image>
