--- a/src/main/resources/view/UpdateProductForm.fxml
+++ b/src/main/resources/view/UpdateProductForm.fxml
@@ -1,14 +1,102 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="edu.icet.pos.controllers.products.UpdateProductFormController"
-            prefHeight="720.0" prefWidth="1080.0">
-
+<AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.products.UpdateProductFormController">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#bfc12c" height="68.0" layoutX="-10.0" layoutY="-2.0" stroke="#eef202" strokeType="INSIDE" width="1103.0" />
+      <Text layoutX="312.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Update Product Details">
+         <font>
+            <Font size="42.0" />
+         </font>
+      </Text>
+      <JFXTextField fx:id="txtProID" layoutX="43.0" layoutY="106.0" prefHeight="46.0" prefWidth="198.0" promptText="Enter Product ID">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXButton layoutX="257.0" layoutY="101.0" onAction="#btnSearchOnAction" prefHeight="51.0" prefWidth="118.0" style="-fx-background-color: #f1c40f;" text="Search">
+         <font>
+            <Font size="24.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXTextField fx:id="txtProName" layoutX="17.0" layoutY="196.0" prefHeight="46.0" prefWidth="360.0" promptText="Product Name">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="txtProSize" layoutX="17.0" layoutY="373.0" prefHeight="46.0" prefWidth="356.0" promptText="Product Size">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="txtCategory" layoutX="16.0" layoutY="282.0" prefHeight="46.0" prefWidth="356.0" promptText="Category">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="txtProPrice" layoutX="15.0" layoutY="463.0" prefHeight="46.0" prefWidth="362.0" promptText="Product Price">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXButton layoutX="720.0" layoutY="664.0" onAction="#btnUpdateOnAction" prefHeight="51.0" prefWidth="118.0" style="-fx-background-color: #34495e;" text="Update" textFill="WHITE">
+         <font>
+            <Font size="24.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXButton layoutX="889.0" layoutY="662.0" onAction="#btnRemoveOnAction" prefHeight="51.0" prefWidth="118.0" style="-fx-background-color: #d63031;" text="Remove" textFill="WHITE">
+         <font>
+            <Font size="24.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <TableView layoutX="426.0" layoutY="141.0" prefHeight="430.0" prefWidth="660.0">
+         <columns>
+            <TableColumn fx:id="colProID" prefWidth="97.60003662109375" text="ID" />
+            <TableColumn fx:id="colProName" prefWidth="128.7999267578125" text="Product Name" />
+            <TableColumn fx:id="colCategory" prefWidth="114.400146484375" text="Category" />
+            <TableColumn fx:id="colSize" prefWidth="87.46673583984375" text="Size" />
+            <TableColumn fx:id="colPrice" prefWidth="118.933349609375" text="Price" />
+            <TableColumn fx:id="colQTY" prefWidth="106.13323974609375" text="QTY" />
+         </columns>
+      </TableView>
+      <Separator layoutX="400.0" layoutY="100.0" opacity="0.75" orientation="VERTICAL" prefHeight="524.0" prefWidth="4.0" />
+      <JFXTextField fx:id="txtProQTY" layoutX="15.0" layoutY="548.0" prefHeight="46.0" prefWidth="362.0" promptText="Product QTY">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <ImageView fx:id="btnBack" fitHeight="62.0" fitWidth="73.0" layoutX="10.0" layoutY="651.0" mouseTransparent="true" onMouseClicked="#btnBackOnAction" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assets/back.png" />
+         </image>
+         <effect>
+            <DropShadow offsetX="5.0" offsetY="3.0" spread="0.07" />
+         </effect>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
+   </children>
 </AnchorPane>
