--- a/src/main/resources/view/LogInForm.fxml
+++ b/src/main/resources/view/LogInForm.fxml
@@ -3,11 +3,13 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.user.LoginFormController">
    <children>
@@ -17,17 +19,17 @@
             <Font size="42.0" />
          </font>
       </Text>
-      <JFXTextField fx:id="txtEMail" layoutX="475.0" layoutY="187.0" prefHeight="45.0" prefWidth="450.0" promptText="Username">
+      <JFXTextField fx:id="txtEMail" layoutX="493.0" layoutY="208.0" prefHeight="45.0" prefWidth="450.0" promptText="Username">
          <font>
             <Font size="21.0" />
          </font>
       </JFXTextField>
-      <JFXTextField fx:id="txtUser" layoutX="475.0" layoutY="277.0" prefHeight="45.0" prefWidth="450.0" promptText="Password">
+      <JFXTextField fx:id="txtUser" layoutX="493.0" layoutY="318.0" prefHeight="45.0" prefWidth="450.0" promptText="Password">
          <font>
             <Font size="21.0" />
          </font>
       </JFXTextField>
-      <JFXButton layoutX="657.0" layoutY="592.0" onAction="#LogInBtnOnAction" prefHeight="60.0" prefWidth="133.0" style="-fx-border-radius: 80; -fx-background-color: #d63031;" text="Log In" textFill="WHITE">
+      <JFXButton layoutX="688.0" layoutY="462.0" onAction="#LogInBtnOnAction" prefHeight="60.0" prefWidth="133.0" style="-fx-border-radius: 80; -fx-background-color: #d63031;" text="Log In" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -35,5 +37,27 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
+      <ImageView fitHeight="351.0" fitWidth="382.0" layoutX="54.0" layoutY="337.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assets/brand.png" />
+         </image>
+      </ImageView>
+      <Text layoutX="105.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome To">
+         <font>
+            <Font size="42.0" />
+         </font>
+      </Text>
+      <Text fill="#eeff00" layoutX="83.0" layoutY="224.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CLOTHIFY">
+         <font>
+            <Font name="Calibri" size="70.0" />
+         </font>
+      </Text>
+      <Line endX="100.0" layoutX="569.0" layoutY="491.0" startX="-114.0" />
+      <Line endX="106.0" layoutX="952.0" layoutY="490.0" startX="-113.33331298828125" />
+      <Text layoutX="503.0" layoutY="612.0" strokeType="OUTSIDE" strokeWidth="0.0">
+         <font>
+            <Font size="42.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
