--- a/src/main/resources/view/SignUpForm.fxml
+++ b/src/main/resources/view/SignUpForm.fxml
@@ -46,7 +46,7 @@
                   <Font size="21.0" />
                </font>
             </JFXTextField>
-            <JFXButton layoutX="654.0" layoutY="552.0" prefHeight="60.0" prefWidth="133.0" style="-fx-border-radius: 80; -fx-background-color: #d63031;" text="Register" textFill="WHITE">
+            <JFXButton layoutX="654.0" layoutY="552.0" onAction="#RegisterBtnOnAction" prefHeight="60.0" prefWidth="133.0" style="-fx-border-radius: 80; -fx-background-color: #d63031;" text="Register" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
