--- a/src/main/resources/view/LogInForm.fxml
+++ b/src/main/resources/view/LogInForm.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,23 +14,23 @@
 
 <AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.user.LoginFormController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8cbeed" height="653.0" layoutX="455.0" layoutY="42.0" opacity="0.87" stroke="BLACK" strokeType="INSIDE" width="603.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#8cbeed" height="653.0" layoutX="455.0" layoutY="46.0" opacity="0.87" stroke="BLACK" strokeType="INSIDE" width="603.0" />
       <Text layoutX="692.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Log In">
          <font>
-            <Font size="42.0" />
+            <Font size="46.0" />
          </font>
       </Text>
-      <JFXTextField fx:id="txtEMail" layoutX="493.0" layoutY="208.0" prefHeight="45.0" prefWidth="450.0" promptText="Username">
+      <JFXTextField fx:id="txtUsername" layoutX="493.0" layoutY="208.0" prefHeight="45.0" prefWidth="450.0" promptText="Username">
          <font>
             <Font size="21.0" />
          </font>
       </JFXTextField>
-      <JFXTextField fx:id="txtUser" layoutX="493.0" layoutY="318.0" prefHeight="45.0" prefWidth="450.0" promptText="Password">
+      <JFXTextField fx:id="txtPassword" layoutX="493.0" layoutY="318.0" prefHeight="45.0" prefWidth="450.0" promptText="Password">
          <font>
             <Font size="21.0" />
          </font>
       </JFXTextField>
-      <JFXButton layoutX="688.0" layoutY="462.0" onAction="#LogInBtnOnAction" prefHeight="60.0" prefWidth="133.0" style="-fx-border-radius: 80; -fx-background-color: #d63031;" text="Log In" textFill="WHITE">
+      <JFXButton layoutX="688.0" layoutY="450.0" onAction="#LogInBtnOnAction" prefHeight="60.0" prefWidth="133.0" style="-fx-border-radius: 80; -fx-background-color: #d63031;" text="Log In" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -52,11 +53,26 @@
             <Font name="Calibri" size="70.0" />
          </font>
       </Text>
-      <Line endX="100.0" layoutX="569.0" layoutY="491.0" startX="-114.0" />
-      <Line endX="106.0" layoutX="952.0" layoutY="490.0" startX="-113.33331298828125" />
+      <Line endX="100.0" layoutX="569.0" layoutY="479.0" startX="-114.0" />
+      <Line endX="106.0" layoutX="952.0" layoutY="478.0" startX="-113.33331298828125" />
       <Text layoutX="503.0" layoutY="612.0" strokeType="OUTSIDE" strokeWidth="0.0">
          <font>
             <Font size="42.0" />
+         </font>
+      </Text>
+      <Text layoutX="495.0" layoutY="582.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Do you haven't account..?">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Text>
+      <Hyperlink layoutX="764.0" layoutY="551.0" onAction="#CreateAccLinkOnAction" text="Create Account" textFill="#9503e4" underline="true">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </Hyperlink>
+      <Text layoutX="599.0" layoutY="675.0" strokeType="OUTSIDE" strokeWidth="0.0" text="© Clothify Store Private Limited.">
+         <font>
+            <Font size="21.0" />
          </font>
       </Text>
    </children>
