--- a/src/main/resources/view/ManageOrdersForm.fxml
+++ b/src/main/resources/view/ManageOrdersForm.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.orders.ManageOrdersFormController">
    <children>
       <ImageView fitHeight="496.0" fitWidth="810.0" layoutX="-18.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true">
@@ -21,12 +20,12 @@
             <Font size="46.0" />
          </font>
       </Text>
-      <ImageView fitHeight="54.0" fitWidth="63.0" layoutX="36.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="54.0" fitWidth="63.0" layoutX="36.0" layoutY="39.0" onMouseClicked="#btnBackOnAction" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/back.png" />
          </image>
       </ImageView>
-      <JFXButton layoutX="640.0" layoutY="255.0" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Add New Order" textFill="WHITE">
+      <JFXButton layoutX="640.0" layoutY="255.0" onAction="#btnAddOrderOnAction" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Add New Order" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -34,7 +33,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton layoutX="792.0" layoutY="390.0" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="View Details" textFill="WHITE">
+      <JFXButton layoutX="792.0" layoutY="390.0" onAction="#btnViewOnAction" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="View Details" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -42,7 +41,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton layoutX="776.0" layoutY="543.0" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Returned" textFill="WHITE">
+      <JFXButton layoutX="776.0" layoutY="543.0" onAction="#btnReturnedOrderOnAction" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Returned" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
