--- a/src/main/resources/view/ManageProductsForm.fxml
+++ b/src/main/resources/view/ManageProductsForm.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="684.0" prefWidth="1080.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.products.ManageProductsFormController">
    <children>
       <ImageView fitHeight="496.0" fitWidth="810.0" layoutX="-28.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true">
@@ -21,12 +20,12 @@
             <Font size="46.0" />
          </font>
       </Text>
-      <ImageView fitHeight="54.0" fitWidth="63.0" layoutX="26.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="54.0" fitWidth="63.0" layoutX="26.0" layoutY="29.0" onMouseClicked="#btnBackOnAction" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/back.png" />
          </image>
       </ImageView>
-      <JFXButton layoutX="722.0" layoutY="601.0" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Remove Product" textFill="WHITE">
+      <JFXButton layoutX="722.0" layoutY="601.0" onAction="#btnRemoveOnAction" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Remove Product" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -34,7 +33,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton layoutX="554.0" layoutY="209.0" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Add New Product" textFill="WHITE">
+      <JFXButton layoutX="554.0" layoutY="209.0" onAction="#btnAddProOnAction" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Add New Product" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -42,7 +41,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton layoutX="722.0" layoutY="318.0" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Update Details" textFill="WHITE">
+      <JFXButton layoutX="722.0" layoutY="318.0" onAction="#btnUpdateOnAction" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Update Details" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -50,7 +49,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton layoutX="769.0" layoutY="459.0" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="View Details" textFill="WHITE">
+      <JFXButton layoutX="769.0" layoutY="459.0" onAction="#btnViewOnAction" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="View Details" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
