--- a/src/main/resources/view/ManageSupForm.fxml
+++ b/src/main/resources/view/ManageSupForm.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.supplier.ManageSupFormController">
    <children>
       <ImageView fitHeight="494.0" fitWidth="865.0" layoutX="-41.0" layoutY="246.0" opacity="0.99" pickOnBounds="true" preserveRatio="true">
@@ -21,7 +20,7 @@
             <Font size="46.0" />
          </font>
       </Text>
-      <JFXButton layoutX="544.0" layoutY="199.0" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Add New Supplier" textFill="WHITE">
+      <JFXButton layoutX="544.0" layoutY="199.0" onAction="#btnAddSuppOnAction" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Add New Supplier" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -29,7 +28,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton layoutX="734.0" layoutY="311.0" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Update Details" textFill="WHITE">
+      <JFXButton layoutX="734.0" layoutY="311.0" onAction="#btnUpdateOnAction" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Update Details" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -37,7 +36,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton layoutX="766.0" layoutY="433.0" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="View Details" textFill="WHITE">
+      <JFXButton layoutX="766.0" layoutY="433.0" onAction="#btnViewOnAction" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="View Details" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -45,7 +44,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton layoutX="707.0" layoutY="572.0" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Delete Supplier" textFill="WHITE">
+      <JFXButton layoutX="707.0" layoutY="572.0" onAction="#btnDeleteSupOnAction" prefHeight="59.0" prefWidth="249.0" style="-fx-border-radius: 50; -fx-background-color: #c23616;" text="Delete Supplier" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -53,7 +52,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <ImageView fitHeight="54.0" fitWidth="63.0" layoutX="16.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="54.0" fitWidth="63.0" layoutX="16.0" layoutY="19.0" onMouseClicked="#btnBackOnAction" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/back.png" />
          </image>
