--- a/src/main/resources/view/AddEmpForm.fxml
+++ b/src/main/resources/view/AddEmpForm.fxml
@@ -77,7 +77,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <ImageView fitHeight="62.0" fitWidth="73.0" layoutX="12.0" layoutY="608.0" mouseTransparent="true" onMouseClicked="#btnBackOnAction" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="62.0" fitWidth="73.0" layoutX="12.0" layoutY="608.0" onMouseClicked="#btnBackOnAction" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/back.png" />
          </image>
