--- a/src/main/resources/view/AddOrderForm.fxml
+++ b/src/main/resources/view/AddOrderForm.fxml
@@ -74,7 +74,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <ImageView fitHeight="62.0" fitWidth="73.0" layoutX="14.0" layoutY="638.0" mouseTransparent="true" onMouseClicked="#btnBackOnAction" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="62.0" fitWidth="73.0" layoutX="14.0" layoutY="638.0" onMouseClicked="#btnBackOnAction" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/back.png" />
          </image>
