--- a/src/main/resources/view/AddProductForm.fxml
+++ b/src/main/resources/view/AddProductForm.fxml
@@ -14,7 +14,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="703.0" prefWidth="1125.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.products.AddProductFormController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#bfc12c" height="68.0" layoutX="-6.0" layoutY="-2.0" stroke="#eef202" strokeType="INSIDE" width="1131.0" />
@@ -59,7 +58,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <ImageView fx:id="btnBack" fitHeight="62.0" fitWidth="73.0" layoutX="12.0" layoutY="629.0" mouseTransparent="true" onMouseClicked="#btnBackOnAction" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="btnBack" fitHeight="62.0" fitWidth="73.0" layoutX="12.0" layoutY="629.0" onMouseClicked="#btnBackOnAction" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/back.png" />
          </image>
