--- a/src/main/resources/view/UpdateEmpDetailsForm.fxml
+++ b/src/main/resources/view/UpdateEmpDetailsForm.fxml
@@ -14,7 +14,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.employee.UpdateEmpDetailsFormController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#bfc12c" height="68.0" layoutX="-19.0" stroke="#eef202" strokeType="INSIDE" width="1103.0" />
@@ -82,7 +81,7 @@
          </columns>
       </TableView>
       <Separator layoutX="398.0" layoutY="109.0" opacity="0.75" orientation="VERTICAL" prefHeight="496.0" prefWidth="4.0" />
-      <ImageView fitHeight="62.0" fitWidth="73.0" layoutX="15.0" layoutY="641.0" mouseTransparent="true" onMouseClicked="#btnBackOnAction" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="62.0" fitWidth="73.0" layoutX="15.0" layoutY="641.0" onMouseClicked="#btnBackOnAction" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/back.png" />
          </image>
