--- a/src/main/resources/view/UpdateSupplierForm.fxml
+++ b/src/main/resources/view/UpdateSupplierForm.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.supplier.UpdateSupplierFormController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#bfc12c" height="68.0" layoutY="-1.0" stroke="#eef202" strokeType="INSIDE" width="1103.0" />
@@ -69,7 +68,7 @@
             <Font size="21.0" />
          </font>
       </JFXTextField>
-      <ImageView fx:id="btnBack" fitHeight="62.0" fitWidth="73.0" layoutX="20.0" layoutY="631.0" mouseTransparent="true" onMouseClicked="#btnBackOnAction" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="btnBack" fitHeight="62.0" fitWidth="73.0" layoutX="20.0" layoutY="631.0" onMouseClicked="#btnBackOnAction" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/back.png" />
          </image>
