--- a/src/main/resources/view/ViewProductForm.fxml
+++ b/src/main/resources/view/ViewProductForm.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #0984e3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.pos.controllers.products.ViewProductFormController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#bfc12c" height="68.0" layoutX="-9.0" layoutY="-1.0" stroke="#eef202" strokeType="INSIDE" width="1103.0" />
@@ -30,7 +29,7 @@
             <TableColumn fx:id="colMail1" prefWidth="139.19989013671875" text="QTY" />
          </columns>
       </TableView>
-      <ImageView fitHeight="62.0" fitWidth="73.0" layoutX="6.0" layoutY="645.0" mouseTransparent="true" onMouseClicked="#btnBackOnAction" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="62.0" fitWidth="73.0" layoutX="6.0" layoutY="645.0" onMouseClicked="#btnBackOnAction" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/back.png" />
          </image>
